# backdoor_rootkit

./: README.md
mod_rootme-0.4/: Makefile  Makefile32  README.txt  httpd13.h  httpd20.h  httpd22.h  mod_rootme.c  mod_rootme2.c  mod_rootme22.c  mrm_client.c  mrm_server.h
rootkit_lrk5/: makefile  ssh
rootkit_lrk5/bd/TX/: ktpage0.c  ktpage1.c  makefile
rootkit_lrk5/bd/XT/: ktpage0_r.c  ktpage1_r.c  makefile
rootkit_lrk5/coreutils-5.2.1/: Makefile  config.status  cp.sh  tags
rootkit_lrk5/coreutils-5.2.1/doc/: Makefile  coreutils.info  stamp-vti
rootkit_lrk5/coreutils-5.2.1/lib/: Makefile  getdate.c
rootkit_lrk5/coreutils-5.2.1/lib/.deps/: acl.Po  addext.Po  argmatch.Po  asnprintf.Po  backupfile.Po  basename.Po  c-strtod.Po  canon-host.Po  cloexec.Po  closeout.Po  cycle-check.Po  diacrit.Po  dirname.Po  dup-safer.Po  exclude.Po  exitfail.Po  file-type.Po  filemode.Po  fopen-safer.Po  free.Po  fsusage.Po  fts.Po  full-read.Po  full-write.Po  getcwd.Po  getdate.Po  getndelim2.Po  getopt.Po  getopt1.Po  gettime.Po  getugroups.Po  hard-locale.Po  hash.Po  (+59 more)
rootkit_lrk5/coreutils-5.2.1/m4/: Makefile
rootkit_lrk5/coreutils-5.2.1/man/: Makefile  basename.1  cat.1  chgrp.1  chmod.1  chown.1  chroot.1  cksum.1  comm.1  cp.1  csplit.1  cut.1  date.1  dd.1  df.1  dir.1  dircolors.1  dirname.1  du.1  echo.1  env.1  expand.1  expr.1  factor.1  false.1  fmt.1  fold.1  groups.1  head.1  hostid.1  hostname.1  id.1  install.1  join.1  kill.1  link.1  ln.1  logname.1  ls.1  md5sum.1  (+49 more)
rootkit_lrk5/coreutils-5.2.1/po/: Makefile  Makefile.in  POTFILES  af.gmo  be.gmo  ca.gmo  coreutils.pot  cs.gmo  da.gmo  de.gmo  el.gmo  es.gmo  et.gmo  fi.gmo  fr.gmo  ga.gmo  gl.gmo  hu.gmo  it.gmo  ja.gmo  ko.gmo  lg.gmo  ms.gmo  nb.gmo  nl.gmo  no.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ru.gmo  sk.gmo  sl.gmo  sv.gmo  tr.gmo  zh_CN.gmo  zh_TW.gmo
rootkit_lrk5/coreutils-5.2.1/src/: Makefile  a.out  dircolors.h  false.c  fsu.c  localedir.h  ls.c  md5sum.c  mksu.sh  su.c  su.c_bk  su.tgz  tee.c  test.c
rootkit_lrk5/coreutils-5.2.1/tests/: Makefile
rootkit_lrk5/findutils-4.4.0/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.status  configure  configure.ac  cp.sh  tags
rootkit_lrk5/findutils-4.4.0/build-aux/: Makefile  Makefile.in  mdate-sh  texinfo.tex  ylwrap
rootkit_lrk5/findutils-4.4.0/doc/: Makefile  Makefile.in  find-maint.info  find-maint.texi  find.info  find.texi  stamp-1  stamp-vti
rootkit_lrk5/findutils-4.4.0/find/: Makefile  Makefile.in  find.1  ftsfind.c  parser.c  pred.c  tags  util.c
rootkit_lrk5/findutils-4.4.0/gnulib/: Makefile  Makefile.in
rootkit_lrk5/findutils-4.4.0/lib/: Makefile  Makefile.in  dircallback.c
rootkit_lrk5/findutils-4.4.0/locate/: Makefile  Makefile.am  Makefile.in  updatedb.1  updatedb.sh
rootkit_lrk5/findutils-4.4.0/m4/: Makefile  Makefile.in
rootkit_lrk5/findutils-4.4.0/po/: Makefile  Makefile.in  POTFILES  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  findutils.pot  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  (+38 more)
rootkit_lrk5/findutils-4.4.0/tests/: Makefile  Makefile.in
rootkit_lrk5/findutils-4.4.0/xargs/: Makefile  Makefile.in  xargs.1  xargs.c
rootkit_lrk5/include/: bin  rkcommon.h
rootkit_lrk5/lib/: d3des.c  d3des.h  de.c  exdes.c  exdes.h  mailfile.c  makefile  rkcrypt.c  rkcrypt.h  sendmail.c  sendmail_bk.c  tags  util.h  util_ip.c
rootkit_lrk5/lsof-4.81.dfsg.1/: 00CREDITS  00DIALECTS  00DIST  00MANIFEST  00TEST  Configure  Makefile  arg.c  cp.sh  dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dproto.h  dsock.c  dstore.c  lsof.8  lsof.man  machine.h  proc.c  version
rootkit_lrk5/lsof-4.81.dfsg.1/lib/: Makefile
rootkit_lrk5/lsof-4.81.dfsg.1/tests/: TestDB  config.cflags
rootkit_lrk5/net-tools-1.60/: Makefile  config.h  config.make  config.status  cp.sh  hostname.c  netstat.c  tags
rootkit_lrk5/net-tools-1.60/lib/: inet_sr.c  x25_sr.c
rootkit_lrk5/openssh-4.3p2/: Makefile  auth-passwd.c  buildpkg.sh  config.h  config.status  cp.sh  opensshd.init  ssh_prng_cmds  sshconnect2.c  survey.sh
rootkit_lrk5/openssh-4.3p2/openbsd-compat/: Makefile
rootkit_lrk5/openssh-4.3p2/scard/: Makefile
rootkit_lrk5/othertool/: clearlog.c  cp.sh  fix.c  makefile
rootkit_lrk5/procps-3.2.8/: Makefile  cp.sh  make.err  make.out  tags  top.c
rootkit_lrk5/procps-3.2.8/ps/: common.h  global.c  select.c
rootkit_lrk5/psmisc-22.14/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  cp.sh
rootkit_lrk5/psmisc-22.14/doc/: Makefile  Makefile.am  Makefile.in  fuser.1  killall.1  peekfd.1  prtstat.1  pstree.1
rootkit_lrk5/psmisc-22.14/icons/: Makefile  Makefile.am  Makefile.in
rootkit_lrk5/psmisc-22.14/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  de.gmo  de.po  el.gmo  el.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  nb.gmo  nb.po  nl.gmo  nl.po  pl.gmo  pl.po  psmisc.pot  pt.gmo  pt.po  (+14 more)
rootkit_lrk5/psmisc-22.14/src/: Makefile  Makefile.am  Makefile.in  comm.h  fuser.c  fuser.h  i18n.h  killall.c  lists.h  peekfd.c  prtstat.c  prtstat.h  pstree.c  signals.c  signals.h  signames.c
rootkit_lrk5/psmisc-22.14/src/.deps/: fuser.Po  killall.Po  peekfd.Po  prtstat.Po  pstree.Po  signals.Po
rootkit_lrk5/script/: bc.pl  p.sh  w.pl
rootkit_lrk5/sendpasswd/: client.c  cp.sh  get_ip_port.c  get_ip_port.h  makefile
rootkit_lrk5/setup/: run.sh
(+614 files in other folders)
